build: Security-driven dependency updates for next branch.